bootstrap grid, jquery, some change on 7-1 pattern, project snippets

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "boilerplate",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap-4-grid": "^3.4.0",
+    "jquery": "^3.5.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
