--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
     "webpack-stream": "^5.2.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ghpublish": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "pandu wijaya",
   "license": "ISC"
