--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "webpack-stream": "^5.2.1"
   },
   "scripts": {
-    "ghpublish": "git subtree push --prefix dist origin gh-pages"
+    "ghpublish": "git push origin --delete gh-pages && git subtree push --prefix dist origin gh-pages"
   },
   "author": "pandu wijaya",
   "license": "ISC"
